--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<!-- Header -->
 		<div id="header">
-			<div id="nav-wrapper"> 
+			<div id="nav-wrapper">
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
@@ -36,8 +36,8 @@
 					</ul>
 				</nav>
 			</div>
-			<div class="container"> 
-				
+			<div class="container">
+
 				<!-- Logo -->
 				<div id="logo">
 					<h1><a href="#">Linear</a></h1>
@@ -86,36 +86,36 @@
 					<section class="6u">
 						<a href="#" class="image full"><img src="images/pic01.jpg" alt=""></a>
 						<header>
-							<h2>Mauris vulputate dolor</h2>
+							<h2>Servicio 1</h2>
 						</header>
 						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-					</section>				
+					</section>
 					<section class="6u">
 						<a href="#" class="image full"><img src="images/pic02.jpg" alt=""></a>
 						<header>
 							<h2>Mauris vulputate dolor</h2>
 						</header>
 						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-					</section>				
+					</section>
 				</div>
 
 				<div class="row">
 					<section class="6u">
 						<a href="#" class="image full"><img src="images/pic03.jpg" alt=""></a>
 						<header>
-							<h2>Mauris vulputate dolor</h2>
+							<h2>Servicio 2</h2>
 						</header>
 						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-					</section>				
+					</section>
 					<section class="6u">
 						<a href="#" class="image full"><img src="images/pic04.jpg" alt=""></a>
 						<header>
-							<h2>Mauris vulputate dolor</h2>
+							<h2>Servicio 3</h2>
 						</header>
 						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-					</section>				
+					</section>
 				</div>
-			
+
 			</div>
 		</div>
 
