Cambiando textos de servicios

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<header>
 							<h2>Mauris vulputate dolor</h2>
 						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+						<p>Super servicios 1.</p>
 					</section>
 				</div>
 
@@ -105,14 +105,14 @@
 						<header>
 							<h2>Servicio 2</h2>
 						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+						<p>Super servicio 2.</p>
 					</section>
 					<section class="6u">
 						<a href="#" class="image full"><img src="images/pic04.jpg" alt=""></a>
 						<header>
 							<h2>Servicio 3</h2>
 						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+						<p>Super servico 3.</p>
 					</section>
 				</div>
 
