--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						<li><a href="left-sidebar.html">Left Sidebar</a></li>
 						<li><a href="right-sidebar.html">Right Sidebar</a></li>
 						<li><a href="no-sidebar.html">No Sidebar</a></li>
+						<li><a href="joan.html">Joan</a></li>
 					</ul>
 				</nav>
 			</div>
