--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
+						<li class="active"><a href="julio.html">Julio</a></li>
 						<li class="active"><a href="index.html">Homepage</a></li>
 						<li><a href="left-sidebar.html">Left Sidebar</a></li>
 						<li><a href="right-sidebar.html">Right Sidebar</a></li>
